theme/static/css/hydroshare_core.css
/* ... */
.metadata-wrapper {
    margin-left: 50px;
    margin-bottom: 5px;
}

.metadata-wrapper > h5 {
    margin: 2px 0;
}

.activity-description {
    float: left;
    border-left: 3px solid #CCC;
    max-height: 50px;
    overflow: hidden;
    margin-bottom: 5px;
    margin-top: 10px;
}

.contribution .activity-description {
    margin-left: 15px;
}

#overview .activity-block:first-child {
    border-top: 0;
    margin-top: 0;
    padding-top:0;
}

.show-more-btn {
    width: 50px;
    margin-left: 10px;
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    text-align: center;
    color: #AAA;
    border: 1px solid #ddd;
    font-size: 12px;
    cursor: pointer;
    float: left;
}

.abstract-block {
    color: #757575;
    border-left: 3px solid #CCC;
    padding-left: 5px;
      margin-top: 10px;
}

table.overview tr > td:first-child {
    padding-right: 10px;
}

.icon-resource-type {
    text-align: center;
    border: 1px solid #ddd;
    padding: 8px;
    border-radius: 0 0 4px 4px;
    background-color: #FFF;
}

.icon-resource-type > span {
    color: #757575;
	text-shadow: 0 1px 0 #fff;
}

.icon-resource-type, .contribution {
    box-shadow: 1px 1px 5px #E8E8E8;
    -moz-box-shadow: 1px 1px 5px #E8E8E8;
    -webkit-box-shadow: 1px 1px 5px #E8E8E8;
}

.icon-resource-type {
	padding: 20px 10px;
}

.icon-resource-type > .glyphicon{
    font-size: 18px;
    color: #35AAC0;
    top: 3px;
}

.icon-resource-type-wrapper {
    float: right;
    margin-top: -12px;
    margin-right: 20px;
    margin-bottom: 10px;
}

.table-res-type-icon {
    background-color: #FFF;
    border: 1px solid #ddd;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.table-user-contributions tbody > tr > td {
    border: 0;
    cursor:pointer;
}

.table-user-contributions tbody > tr.active {
    border-left: 4px solid #0A91AB;
    pointer-events: none;
}

.table-user-contributions tbody > tr.active td:first-child {
    font-weight:bold;
}

.contribution {
    border: 1px solid #ddd;
    margin-bottom: 20px;
    padding: 10px 0;
}

h4.title {
    border-bottom: 1px solid #ddd;
    padding-bottom: 7px;
}

#badge-generic .badge {
    background-color:#1f77b4;
}

#badge-geographic .badge {
    background-color: #6A8593;
}

#badge-his .badge {
    background-color: #2ca02c;
}

#badge-model-program .badge {
    background-color: #4A5BB9;
}

#badge-model-instance .badge {
    background-color: #CFDD40;
}

#badge-swat .badge {
    background-color: #FF9F0D;
}

#badge-multidimensional .badge {
    background-color: #7247BC;
}

#badge-time-series .badge {
    background-color: #129D90;
}

#badge-geographic-feature .badge {
    background-color: #795548;
}

#badge-web-app .badge {
    background-color: rgb(242, 67, 55);
}

#color-scheme {
    float: right;
    padding: 5px 0 0 0;
}

.YellowGreenBlue-colormap-band-1 {
    background-color:rgb(1,70,54);
}
.YellowGreenBlue-colormap-band-1-fill {
    fill:rgb(1,70,54);
}
.YellowGreenBlue-colormap-band-2 {
    background-color:rgb(1,108,89);
}
.YellowGreenBlue-colormap-band-2-fill {
    fill:rgb(1,108,89);
}
.YellowGreenBlue-colormap-band-3 {
    background-color:rgb(2,129,138);
}
.YellowGreenBlue-colormap-band-3-fill {
    fill:rgb(2,129,138);
}
.YellowGreenBlue-colormap-band-4 {
    background-color:rgb(54,144,192);
}
.YellowGreenBlue-colormap-band-4-fill {
    fill:rgb(54,144,192);
}
.YellowGreenBlue-colormap-band-5 {
    background-color:rgb(103,169,207);
}
.YellowGreenBlue-colormap-band-5-fill {
    fill:rgb(103,169,207);
}
.YellowGreenBlue-colormap-band-6 {
    color: red;
    background-color:rgb(166,189,219);
}
.YellowGreenBlue-colormap-band-6-fill {
    fill:rgb(166,189,219);
}
.YellowGreenBlue-colormap-band-7 {
    color: red;
    background-color:rgb(208,209,230);
}
.YellowGreenBlue-colormap-band-7-fill {
    fill:rgb(208,209,230);
}
.YellowGreenBlue-colormap-band-8 {
    color: red;
    background-color:rgb(236,226,240);
}
.YellowGreenBlue-colormap-band-8-fill {
    fill:rgb(236,226,240);
}
.YellowGreenBlue-colormap-band-9 {
    color: red;
    background-color:rgb(255,247,251);
}
.YellowGreenBlue-colormap-band-9-fill {
    fill:rgb(255,247,251);
}

/*-------- My resources page revamp ---------*/

.dropdown.dropdown-lg .dropdown-menu {
    margin-top: -1px;
    padding: 6px 20px;
}
.input-group-btn .btn-group {
    display: flex !important;
}
.btn-group .btn {
    border-radius: 0;
    margin-left: -1px;
}
.btn-group .btn:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
}
.btn-group .form-horizontal .btn[type="submit"] {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
.form-horizontal .form-group {
    margin-left: 0;
    margin-right: 0;
}
.form-group .form-control:last-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}

#item-selectors_filter {
	display: none;
}

#item-selectors {
    display: none;
    font-size: 14px;
}

.dataTables_scroll {
    border: 1px solid #ddd;
}

#item-selectors tbody td {
	border-bottom: 1px solid #EEE;
}

.dataTables_scrollHeadInner thead th, .dataTables_scrollBody {
    border-bottom: 0 !important;
}

.dataTables_scrollHeadInner tr:first-child th:first-child {
	padding-left: 10px;
}

.dataTables_scrollBody {
    border-top: 1px solid #DDD;
}

#item-selectors tr > td:first-child {
	max-width: 90px;
	min-width: 90px;
	padding-right: 0;
}

.dropdown.dropdown-lg {
	position: static !important;
}

.dropdown.dropdown-lg .dropdown-menu {
	left: -251px;
	width: 284px;
}

.btn-clear-search {
	position: absolute;
	left: -25px;
	color: #A8A8A8;
	font-size: 16px;
	background: #FFF;
	top: 10px;
}

.search-icon {
	position: absolute;
	top: 10px;
	left: 8px;
	color: #A8A8A8;
}

#input-author, #input-subject {
	padding-right: 25px;
}

#resource-search-input {
	padding-left: 25px;
	padding-right: 30px;
}

.btn-clear-search-inline {
	color: #A8A8A8;
	float: right;
	top: -25px;
	right: 8px;
}
/* ... */

